configuration file added

--- a/ScrapBorsaBarc.ipynb
+++ b/ScrapBorsaBarc.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "monthly-brain",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Primerament importem totes les llibreries necessaries per completar el projecte.\n",
     "import os\n",
     "import requests\n",
     "import argparse\n",
@@ -14,12 +15,24 @@
     "import pathlib \n",
     "import time\n",
     "from datetime import datetime\n",
-    "from bs4 import BeautifulSoup\n"
+    "from bs4 import BeautifulSoup\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carreguem el fitxer de configuració a la variable config:\n",
+    "with open(\"configuration.json\", \"r\") as configFile:\n",
+    "    config = json.load(configFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "developed-great",
    "metadata": {},
    "outputs": [],
@@ -29,14 +42,7 @@
     "\n",
     "# Get Header\n",
     "def getHeaders():   \n",
-    "    headers = {\"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8\",\n",
-    "               \"Accept-Encoding: gzip, deflate, br\",               \n",
-    "               \"Accept-Language: es-ES,es;q=0.8,en-US;q=0.5,en;q=0.3\",  \n",
-    "               \"Connection: keep-alive\",                              \n",
-    "               \"TE: Trailers\",\n",
-    "               \"Upgrade-Insecure-Requests: 1\",\n",
-    "               \"User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:87.0) Gecko/20100101 Firefox/87.0\"}\n",
-    "    return headers\n",
+    "    return config['header']\n",
     "\n",
     "\n",
     "# Get table Page        \n",
@@ -49,7 +55,7 @@
     "        soup = BeautifulSoup(page.text, \"html.parser\")\n",
     "        table = soup.find('table', attrs={'id': 'ctl00_Contenido_tblAcciones'})                           \n",
     "    except requests.exceptions.Timeout:\n",
-    "        print(\"Timeout a la càrrega de la web\")        \n",
+    "        print(\"Timeout a la càrrega de la web\")\n",
     "    except:        \n",
     "        print(\"Error inesperat\")\n",
     "    return table        \n",
@@ -91,11 +97,10 @@
     "                        break;\n",
     "                    colNum=colNum+1\n",
     "            rowNum=rowNum+1       \n",
-    "    return values    \n",
-    "        \n",
+    "    return values\n",
     "\n",
     "# Set List with table page values\n",
-    "def getIndexs(UrlBase,UrlRef):\n",
+    "def getIndexs(UrlBase,UrlRef,bTableHead):\n",
     "    indexList = []\n",
     "    UrlIndexPage = UrlBase+UrlRef\n",
     "    table = getPageTable(UrlIndexPage)    \n",
@@ -107,10 +112,11 @@
     "        # Cells Header\n",
     "        cellsHead = tr.findAll('th')                \n",
     "        if ((cellsHead is not None) and (len(cellsHead) > 0)):\n",
-    "            for cellHead in cellsHead:        \n",
-    "                value = [cellHead.text.strip(),'']                  \n",
-    "                colList.append(value)                                                   \n",
-    "            colList.append(['Capitalización',''])\n",
+    "            if (bTableHead):\n",
+    "                for cellHead in cellsHead:        \n",
+    "                    value = [cellHead.text.strip(),'']                  \n",
+    "                    colList.append(value)                                                   \n",
+    "                colList.append(['Capitalización',''])\n",
     "        else:\n",
     "            # Cells value\n",
     "            cells = tr.findAll('td')                        \n",
@@ -130,7 +136,7 @@
     "                colList.append(value)             \n",
     "                \n",
     "        # Extend list with firm information \n",
-    "        colList.extend(valuesFirm)\n",
+    "        colList.extend(valuesFirm)        \n",
     "        # Append to rowlist    \n",
     "        rowList.append(colList)         \n",
     "    return rowList \n",
@@ -139,25 +145,57 @@
     "def writecsv(table,filename):\n",
     "    currentDir = os.path.abspath('')\n",
     "    filePath = os.path.join(currentDir,filename)\n",
-    "    file = open(filePath,\"w+\")\n",
+    "    file = open(filePath,\"a+\")\n",
     "    for row in table:\n",
     "        for col in row:\n",
     "            file.write(col[0]+\";\")\n",
     "        file.write(\"\\n\")\n",
+    "    \n",
+    "# Extract all information of the Stock Exchange at any time\n",
+    "def SaveOneDayInfo(fileName,bTabHeader):\n",
+    "    indexList = getIndexs(config['URLs']['base'], config['URLs']['ref'], bTabHeader);       \n",
+    "    # Check end of Stock Exchange session\n",
+    "    bEndSession = False    \n",
+    "    if (indexList is not None):        \n",
+    "        posRow = 0\n",
+    "        if (bTabHeader): posRow = 1            \n",
+    "        HourSession = str(indexList[posRow][8][0])            \n",
+    "        bEndSession  = (HourSession.strip() == 'Cierre')                \n",
+    "    #save file\n",
+    "    writecsv(indexList,fileName)            \n",
+    "    #return state\n",
+    "    return bEndSession        \n",
+    "        \n",
+    "# Save the Stock Exchange one day\n",
+    "def ScheduleDayFile():\n",
+    "    fileName = \"ListaIndices\" + time.strftime('%Y%m%d')+ \".csv\"\n",
+    "    bEndSession = SaveOneDayInfo(fileName,True);\n",
+    "    while (not bEndSession):            \n",
+    "        print(\"Waiting 15 minutes\")\n",
+    "        time.sleep(60*15)        \n",
+    "        bEndSession = SaveOneDayInfo(fileName,False);    \n",
+    "    print(\"End of session: file generated: \" + fileName)\n",
+    "    \n",
+    "# Save the Stock Exchange one week\n",
+    "def ScheduleWeekFiles():    \n",
+    "    scheduler = BlockingScheduler()    \n",
+    "    scheduler.add_job(job_function, 'cron', day_of_week='mon-fri', hour=9, minute=0)    \n",
+    "    scheduler.start()    \n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "numerical-enemy",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "ACCIONA\n",
       "ACERINOX\n",
@@ -199,35 +237,79 @@
    ],
    "source": [
     "# indicar la ruta\n",
-    "urlbase = 'https://www.borsabcn.es'\n",
-    "urlRef= '/esp/aspx/Mercados/Precios.aspx?indice=ESI100000000&punto=indice'\n",
-    "indexList = getIndexs(urlbase,urlRef);\n"
+    "indexList = getIndexs(config['URLs']['base'], config['URLs']['ref'], True);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "duplicate-error",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writecsv(indexList,\"ListaIndices.csv\")"
+    "writecsv(indexList, config[\"outputFile\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "proper-tennis",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCIONA\n",
+      "ACERINOX\n",
+      "ACS\n",
+      "AENA\n",
+      "ALMIRALL\n",
+      "AMADEUS\n",
+      "ARCELORMIT.\n",
+      "B.SANTANDER\n",
+      "BA.SABADELL\n",
+      "BANKINTER\n",
+      "BBVA\n",
+      "CAIXABANK\n",
+      "CELLNEX\n",
+      "CIE AUTOMOT.\n",
+      "ENAGAS\n",
+      "ENDESA\n",
+      "FERROVIAL\n",
+      "FLUIDRA\n",
+      "GRIFOLS CL.A\n",
+      "IAG\n",
+      "IBERDROLA\n",
+      "INDITEX\n",
+      "INDRA A\n",
+      "INM.COLONIAL\n",
+      "MAPFRE\n",
+      "MELIA HOTELS\n",
+      "MERLIN\n",
+      "NATURGY\n",
+      "PHARMA MAR\n",
+      "R.E.C.\n",
+      "REPSOL\n",
+      "SIEMENS GAME\n",
+      "SOLARIA\n",
+      "TELEFONICA\n",
+      "VISCOFAN\n",
+      "-->Datos leidos\n",
+      "-->Indice no nulo\n",
+      "End of session: file generated: ListaIndices20210403.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "ScheduleDayFile()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python390jvsc74a57bd063fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d",
+   "display_name": "Python 3.9.0 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -239,7 +321,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.0-final"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+   }
   }
  },
  "nbformat": 4,
