--- a/ScrapBorsaBarc.ipynb
+++ b/ScrapBorsaBarc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "monthly-brain",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "developed-great",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Funcions per obtindre la llista del indexs del Ibex 35 de la borsa de Barcelona\n",
     "\n",
     "# Get Header\n",
@@ -50,10 +49,10 @@
     "    table = None\n",
     "    try:\n",
     "        # Data for post form    \n",
-    "        data = {'punto':'indice'}    \n",
-    "        page = requests.post(UrlPage,timeout=10)    \n",
+    "        data = {'punto':'indice'}\n",
+    "        page = requests.post(UrlPage,timeout=10)\n",
     "        soup = BeautifulSoup(page.text, \"html.parser\")\n",
-    "        table = soup.find('table', attrs={'id': 'ctl00_Contenido_tblAcciones'})                           \n",
+    "        table = soup.find('table', attrs={'id': 'ctl00_Contenido_tblAcciones'})\n",
     "    except requests.exceptions.Timeout:\n",
     "        print(\"Timeout a la càrrega de la web\")\n",
     "    except:        \n",
@@ -99,11 +98,23 @@
     "            rowNum=rowNum+1       \n",
     "    return values\n",
     "\n",
+    "# Set List with column page names\n",
+    "def getColNames(UrlBase,UrlRef):\n",
+    "    colList = []\n",
+    "    table = getPageTable(UrlBase+UrlRef)\n",
+    "    for tr in table.find_all(\"tr\"):      \n",
+    "        # Cells Header\n",
+    "        cellsHead = tr.findAll('th')                \n",
+    "        if ((cellsHead is not None) and (len(cellsHead) > 0)):\n",
+    "            for cellHead in cellsHead:   \n",
+    "                colList.append(cellHead.text.strip())\n",
+    "            colList.append('Capitalización')\n",
+    "    return colList\n",
+    "\n",
     "# Set List with table page values\n",
     "def getIndexs(UrlBase,UrlRef,bTableHead):\n",
     "    indexList = []\n",
-    "    UrlIndexPage = UrlBase+UrlRef\n",
-    "    table = getPageTable(UrlIndexPage)    \n",
+    "    table = getPageTable(UrlBase+UrlRef)    \n",
     "    # Extract table values and links\n",
     "    rowList = []\n",
     "    for tr in table.find_all(\"tr\"):        \n",
@@ -160,7 +171,7 @@
     "        posRow = 0\n",
     "        if (bTabHeader): posRow = 1            \n",
     "        HourSession = str(indexList[posRow][8][0])            \n",
-    "        bEndSession  = (HourSession.strip() == 'Cierre')                \n",
+    "        bEndSession  = (HourSession.strip() == 'Cierre')\n",
     "    #save file\n",
     "    writecsv(indexList,fileName)            \n",
     "    #return state\n",
@@ -168,7 +179,7 @@
     "        \n",
     "# Save the Stock Exchange one day\n",
     "def ScheduleDayFile():\n",
-    "    fileName = \"ListaIndices\" + time.strftime('%Y%m%d')+ \".csv\"\n",
+    "    fileName = \"ListaIndices\" + time.strftime('%Y-%m-%d_%H-%M')+ \".csv\"\n",
     "    bEndSession = SaveOneDayInfo(fileName,True);\n",
     "    while (not bEndSession):            \n",
     "        print(\"Waiting 15 minutes\")\n",
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "numerical-enemy",
    "metadata": {
     "scrolled": true
@@ -231,18 +242,20 @@
       "SIEMENS GAME\n",
       "SOLARIA\n",
       "TELEFONICA\n",
-      "VISCOFAN\n"
+      "VISCOFAN\n",
+      "[[['Nombre', ''], ['Últ.', ''], ['% Dif.', ''], ['Máx.', ''], ['Mín.', ''], ['Volumen', ''], ['Efectivo (miles €)', ''], ['Fecha', ''], ['Hora', ''], ['Capitalización', '']], [['ACCIONA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0125220311'], ['138,2000', ''], ['0,00', ''], ['139,9000', ''], ['137,9000', ''], ['18.687', ''], ['2.595,81', ''], ['08/04/2021', ''], ['12:29:43', ''], ['7.581.189', '']], [['ACERINOX', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0132105018'], ['11,2650', ''], ['0,27', ''], ['11,3200', ''], ['11,1750', ''], ['131.388', ''], ['1.477,75', ''], ['08/04/2021', ''], ['12:32:06', ''], ['3.039.586', '']], [['ACS', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0167050915'], ['27,6000', ''], ['-1,50', ''], ['28,2500', ''], ['27,4600', ''], ['175.302', ''], ['4.849,31', ''], ['08/04/2021', ''], ['12:33:00', ''], ['8.704.822', '']], [['AENA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0105046009'], ['139,3000', ''], ['0,80', ''], ['139,4500', ''], ['138,1000', ''], ['39.103', ''], ['5.415,95', ''], ['08/04/2021', ''], ['12:30:47', ''], ['20.730.000', '']], [['ALMIRALL', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0157097017'], ['12,6700', ''], ['0,80', ''], ['12,6800', ''], ['12,5000', ''], ['79.558', ''], ['1.001,92', ''], ['08/04/2021', ''], ['12:24:00', ''], ['2.238.913', '']], [['AMADEUS', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0109067019'], ['60,1800', ''], ['0,40', ''], ['60,3400', ''], ['59,8800', ''], ['108.041', ''], ['6.498,44', ''], ['08/04/2021', ''], ['12:33:52', ''], ['27.002.922', '']], [['ARCELORMIT.', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=LU1598757687'], ['24,4100', ''], ['-0,10', ''], ['24,9600', ''], ['24,3750', ''], ['131.832', ''], ['3.248,45', ''], ['08/04/2021', ''], ['12:32:00', ''], ['26.947.157', '']], [['B.SANTANDER', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0113900J37'], ['2,9110', ''], ['-1,32', ''], ['2,9710', ''], ['2,9080', ''], ['7.818.466', ''], ['22.913,84', ''], ['08/04/2021', ''], ['12:33:58', ''], ['51.154.892', '']], [['BA.SABADELL', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0113860A34'], ['0,4557', ''], ['-2,48', ''], ['0,4695', ''], ['0,4543', ''], ['12.387.004', ''], ['5.693,34', ''], ['08/04/2021', ''], ['12:34:01', ''], ['2.629.481', '']], [['BANKINTER', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0113679I37'], ['5,8120', ''], ['-0,62', ''], ['5,8960', ''], ['5,7920', ''], ['455.882', ''], ['2.655,70', ''], ['08/04/2021', ''], ['12:32:27', ''], ['5.256.569', '']], [['BBVA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0113211835'], ['4,4850', ''], ['-0,73', ''], ['4,5570', ''], ['4,4840', ''], ['2.491.420', ''], ['11.259,26', ''], ['08/04/2021', ''], ['12:34:02', ''], ['30.125.512', '']], [['CAIXABANK', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0140609019'], ['2,5740', ''], ['-1,64', ''], ['2,6360', ''], ['2,5740', ''], ['2.706.521', ''], ['7.047,38', ''], ['08/04/2021', ''], ['12:33:57', ''], ['21.094.713', '']], [['CELLNEX', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0105066007'], ['42,2500', ''], ['-0,21', ''], ['43,2400', ''], ['40,8300', ''], ['900.148', ''], ['37.807,47', ''], ['08/04/2021', ''], ['12:33:59', ''], ['20.607.245', '']], [['CIE AUTOMOT.', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0105630315'], ['22,5000', ''], ['1,08', ''], ['22,5200', ''], ['22,3400', ''], ['13.935', ''], ['312,61', ''], ['08/04/2021', ''], ['12:33:03', ''], ['2.727.963', '']], [['ENAGAS', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0130960018'], ['18,6500', ''], ['-0,69', ''], ['18,9450', ''], ['18,6250', ''], ['300.305', ''], ['5.644,28', ''], ['08/04/2021', ''], ['12:33:57', ''], ['4.920.174', '']], [['ENDESA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0130670112'], ['22,8500', ''], ['0,57', ''], ['22,9100', ''], ['22,7200', ''], ['163.822', ''], ['3.740,92', ''], ['08/04/2021', ''], ['12:30:41', ''], ['24.054.848', '']], [['FERROVIAL', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0118900010'], ['22,2100', ''], ['0,59', ''], ['22,2100', ''], ['21,9200', ''], ['132.216', ''], ['2.914,73', ''], ['08/04/2021', ''], ['12:33:58', ''], ['16.182.484', '']], [['FLUIDRA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0137650018'], ['25,3500', ''], ['0,20', ''], ['25,7500', ''], ['25,2000', ''], ['85.250', ''], ['2.174,83', ''], ['08/04/2021', ''], ['12:33:03', ''], ['4.949.415', '']], [['GRIFOLS CL.A', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0171996087'], ['23,2700', ''], ['3,98', ''], ['23,3900', ''], ['22,5400', ''], ['523.357', ''], ['12.060,13', ''], ['08/04/2021', ''], ['12:33:40', ''], ['9.536.785', '']], [['IAG', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0177542018'], ['2,4870', ''], ['-1,31', ''], ['2,5370', ''], ['2,4400', ''], ['9.351.424', ''], ['23.096,22', ''], ['08/04/2021', ''], ['12:33:58', ''], ['12.528.120', '']], [['IBERDROLA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0144580Y14'], ['11,3300', ''], ['0,76', ''], ['11,3700', ''], ['11,2350', ''], ['2.587.848', ''], ['29.249,67', ''], ['08/04/2021', ''], ['12:33:00', ''], ['72.172.164', '']], [['INDITEX', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0148396007'], ['27,8200', ''], ['-0,47', ''], ['28,2300', ''], ['27,7100', ''], ['270.402', ''], ['7.547,42', ''], ['08/04/2021', ''], ['12:30:44', ''], ['87.110.423', '']], [['INDRA A', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0118594417'], ['7,4900', ''], ['-1,32', ''], ['7,5950', ''], ['7,4600', ''], ['378.742', ''], ['2.842,83', ''], ['08/04/2021', ''], ['12:31:31', ''], ['1.340.807', '']], [['INM.COLONIAL', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0139140174'], ['8,2050', ''], ['-1,14', ''], ['8,3000', ''], ['8,1600', ''], ['86.205', ''], ['708,32', ''], ['08/04/2021', ''], ['12:30:55', ''], ['4.217.353', '']], [['MAPFRE', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0124244E34'], ['1,8025', ''], ['-1,10', ''], ['1,8350', ''], ['1,7920', ''], ['995.394', ''], ['1.800,30', ''], ['08/04/2021', ''], ['12:33:41', ''], ['5.612.486', '']], [['MELIA HOTELS', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0176252718'], ['6,6080', ''], ['-1,11', ''], ['6,7240', ''], ['6,5200', ''], ['260.804', ''], ['1.718,60', ''], ['08/04/2021', ''], ['12:30:56', ''], ['1.472.713', '']], [['MERLIN', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0105025003'], ['8,9900', ''], ['-0,31', ''], ['9,1000', ''], ['8,9440', ''], ['110.343', ''], ['993,90', ''], ['08/04/2021', ''], ['12:33:28', ''], ['4.236.393', '']], [['NATURGY', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0116870314'], ['20,8300', ''], ['0,43', ''], ['20,9400', ''], ['20,7800', ''], ['57.812', ''], ['1.206,28', ''], ['08/04/2021', ''], ['12:31:33', ''], ['20.109.790', '']], [['PHARMA MAR', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0169501022'], ['94,9600', ''], ['-1,80', ''], ['97,0600', ''], ['94,4200', ''], ['76.917', ''], ['7.354,26', ''], ['08/04/2021', ''], ['12:31:12', ''], ['1.774.920', '']], [['R.E.C.', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0173093024'], ['15,0750', ''], ['0,57', ''], ['15,1450', ''], ['14,9650', ''], ['276.596', ''], ['4.171,30', ''], ['08/04/2021', ''], ['12:32:56', ''], ['8.110.789', '']], [['REPSOL', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0173516115'], ['10,3160', ''], ['-1,53', ''], ['10,5280', ''], ['10,2920', ''], ['906.230', ''], ['9.414,12', ''], ['08/04/2021', ''], ['12:34:02', ''], ['16.425.222', '']], [['SIEMENS GAME', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0143416115'], ['30,7600', ''], ['0,56', ''], ['31,1300', ''], ['30,4400', ''], ['234.325', ''], ['7.212,40', ''], ['08/04/2021', ''], ['12:33:52', ''], ['20.836.176', '']], [['SOLARIA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0165386014'], ['18,1100', ''], ['0,44', ''], ['18,2600', ''], ['17,8000', ''], ['277.159', ''], ['5.003,27', ''], ['08/04/2021', ''], ['12:33:30', ''], ['2.252.864', '']], [['TELEFONICA', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0178430E18'], ['3,7845', ''], ['-0,56', ''], ['3,8410', ''], ['3,7760', ''], ['3.665.498', ''], ['13.921,00', ''], ['08/04/2021', ''], ['12:33:46', ''], ['21.033.597', '']], [['VISCOFAN', '/esp/aspx/Empresas/FichaValor.aspx?ISIN=ES0184262212'], ['59,7000', ''], ['0,67', ''], ['60,1000', ''], ['59,4000', ''], ['34.400', ''], ['2.057,48', ''], ['08/04/2021', ''], ['12:32:37', ''], ['2.757.450', '']]]\n"
      ]
     }
    ],
    "source": [
     "# indicar la ruta\n",
-    "indexList = getIndexs(config['URLs']['base'], config['URLs']['ref'], True);"
+    "indexList = getIndexs(config['URLs']['base'], config['URLs']['ref'], True);\n",
+    "print(indexList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "duplicate-error",
    "metadata": {},
    "outputs": [],
@@ -252,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "proper-tennis",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "ACCIONA\n",
       "ACERINOX\n",
@@ -295,15 +308,87 @@
       "SOLARIA\n",
       "TELEFONICA\n",
       "VISCOFAN\n",
-      "-->Datos leidos\n",
-      "-->Indice no nulo\n",
-      "End of session: file generated: ListaIndices20210403.csv\n"
+      "Waiting 15 minutes\n",
+      "ACCIONA\n",
+      "ACERINOX\n",
+      "ACS\n",
+      "AENA\n",
+      "ALMIRALL\n",
+      "AMADEUS\n",
+      "ARCELORMIT.\n",
+      "B.SANTANDER\n",
+      "BA.SABADELL\n",
+      "BANKINTER\n",
+      "BBVA\n",
+      "CAIXABANK\n",
+      "CELLNEX\n",
+      "CIE AUTOMOT.\n",
+      "ENAGAS\n",
+      "ENDESA\n",
+      "FERROVIAL\n",
+      "FLUIDRA\n",
+      "GRIFOLS CL.A\n",
+      "IAG\n",
+      "IBERDROLA\n",
+      "INDITEX\n",
+      "INDRA A\n",
+      "INM.COLONIAL\n",
+      "MAPFRE\n",
+      "MELIA HOTELS\n",
+      "MERLIN\n",
+      "NATURGY\n",
+      "PHARMA MAR\n",
+      "R.E.C.\n",
+      "REPSOL\n",
+      "SIEMENS GAME\n",
+      "SOLARIA\n",
+      "TELEFONICA\n",
+      "VISCOFAN\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-3b9e4a986f6c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mScheduleDayFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# Inspect tr - td -a href = Index site URL ref (append to base URL)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-6486d9c4b9d6>\u001b[0m in \u001b[0;36mScheduleDayFile\u001b[1;34m()\u001b[0m\n\u001b[0;32m    134\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Waiting 15 minutes\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 136\u001b[1;33m         \u001b[0mbEndSession\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSaveOneDayInfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    137\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"End of session: file generated: \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfileName\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-6486d9c4b9d6>\u001b[0m in \u001b[0;36mSaveOneDayInfo\u001b[1;34m(fileName, bTabHeader)\u001b[0m\n\u001b[0;32m    120\u001b[0m         \u001b[0mposRow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    121\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mbTabHeader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mposRow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 122\u001b[1;33m         \u001b[0mHourSession\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mposRow\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    123\u001b[0m         \u001b[0mbEndSession\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mHourSession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'Cierre'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    124\u001b[0m     \u001b[1;31m#save file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "ScheduleDayFile()"
+    "ScheduleDayFile()\n",
+    "# Inspect tr - td -a href = Index site URL ref (append to base URL)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Nombre', 'Últ.', '% Dif.', 'Máx.', 'Mín.', 'Volumen', 'Efectivo (miles €)', 'Fecha', 'Hora', 'Capitalización']\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = getColNames(config['URLs']['base'], config['URLs']['ref'])\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
